Fix: `Dialog` vertical alignment styles

--- a/src/modules/core/components/Dialog/Dialog.css
+++ b/src/modules/core/components/Dialog/Dialog.css
@@ -1,5 +1,4 @@
 .modal {
-  height: 100%;
   max-height: max-content;
   position: relative;
   z-index: var(--z-index-dialog);
