--- a/src/modules/core/components/Dialog/FullscreenDialog.css
+++ b/src/modules/core/components/Dialog/FullscreenDialog.css
@@ -1,5 +1,4 @@
 .main {
-  height: 100%;
   max-height: max-content;
 }
 
